add movieDetails and tvshows

--- a/src/Components/movie-list/movie-list.component.html
+++ b/src/Components/movie-list/movie-list.component.html
@@ -24,7 +24,10 @@
             @for(movie of movies(); track movie.id){
     <div class="col-lg-2 col-md-4 col-sm-6">
                 <div class="card h-100  border-0">
+                    <a [routerLink]=" ['/movieDetails',movie.id]" >
   <img [src]="'https://image.tmdb.org/t/p/w500'+movie.poster_path" class="card-img-top rounded-3" alt="...">
+
+                    </a>
   <div class="card-body border-0 ">
     <h5 class="card-title fs-5 fw-bold">{{movie.title}}</h5>
     <p class="card-text text-muted fs-6">{{movie.release_date}}</p>
