--- a/src/Components/navbar/navbar.component.html
+++ b/src/Components/navbar/navbar.component.html
@@ -10,11 +10,14 @@
           <a class="nav-link" href="#">En</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " >TvShows</a>
+          <a class="nav-link " routerLink="tvShows" routerLinkActive="router-link-active" >TvShows</a>
         </li>
       
         <li class="nav-item">
           <a class="nav-link" href="#">WatchList</a>
+        </li>
+           <li class="nav-item">
+          <a class="nav-link" routerLink="movieDetails" routerLinkActive="router-link-active" >movieDetails</a>
         </li>
   
       </ul>
