--- a/src/Components/movie-details/movie-details.component.html
+++ b/src/Components/movie-details/movie-details.component.html
@@ -43,9 +43,12 @@
                               <img [src]="'https://image.tmdb.org/t/p/w500'+movie.poster_path" class="card-img-top rounded-3" alt="...">
 
                         </a>
-  <div class="card-body border-0 ">
+  <div class="card-body d-flex justify-content-between border-0 ">
+    <div class="">
     <h5 class="card-title fs-5 fw-bold">{{movie.title}}</h5>
     <p class="card-text text-muted fs-6">{{movie.release_date}}</p>
+    </div>
+<i class="fa-solid fa-heart"></i>
  
   </div>
 </div>
