--- a/src/Components/navbar/navbar.component.html
+++ b/src/Components/navbar/navbar.component.html
@@ -14,11 +14,9 @@
         </li>
       
         <li class="nav-item">
-          <a class="nav-link" href="#">WatchList</a>
+          <a class="nav-link" routerLink="wishList" routerLinkActive="router-link-active" >wishList</a>
         </li>
-           <li class="nav-item">
-          <a class="nav-link" routerLink="movieDetails" routerLinkActive="router-link-active" >movieDetails</a>
-        </li>
+  
   
       </ul>
     </div>
