--- a/src/Components/navbar/navbar.component.scss
+++ b/src/Components/navbar/navbar.component.scss
@@ -4,3 +4,11 @@
 .router-link-active{
     color: white;
 }
+.counter{
+    font-size: 9px;
+    position: absolute;
+    top: -7px;
+    right: 0px;
+    color: white;
+    background-color: black;
+}
