--- a/src/Components/movie-list/movie-list.component.html
+++ b/src/Components/movie-list/movie-list.component.html
@@ -1,15 +1,17 @@
 
 <section class="py-4">
     <div class="container p-5 bg-gray">
-        <div class="text">
+        <div class="">
+      
                     <h1>Welcome to our movie app</h1>
         <p class="my-4">Millions of movies, TV shows and people to discover. Explore now.</p>
         </div>
 
     <div class="input-group input-group-lg">
 
-  <input type="text" class="form-control" aria-label="Sizing example input" placeholder="Search and explore...." aria-describedby="inputGroup-sizing-lg">
+  <input type="text" [(ngModel)]="term" (change)="search()" class="form-control" aria-label="Sizing example input" placeholder="Search and explore...." aria-describedby="inputGroup-sizing-lg">
 <button class="btn bg-main">Search</button>
+<h1>{{term}} </h1>
 </div>
 
 
@@ -21,20 +23,21 @@
     <div class="container">
         <h2 class="pb-4">Now playing</h2>
         <div class="row gy-4">
-            @for(movie of movies(); track movie.id){
-    <div class="col-lg-2 col-md-4 col-sm-6">
+@for(movie of movies(); track movie.id){
+  @if(movie.poster_path){
+       <div class="col-lg-2 col-md-4 col-sm-6">
                 <div class="card h-100  border-0">
                     <a [routerLink]=" ['/movieDetails',movie.id]" >
   <img [src]="'https://image.tmdb.org/t/p/w500'+movie.poster_path" class="card-img-top rounded-3" alt="...">
 
                     </a>
-  <div class="card-body border-0 d-flex justify-content-between p-0 pt-2">
-    <div>
+  <div class="card-body position-relative border-0  p-0 pt-4">
+    <div class="d-flex justify-content-between">
+          <div>
     <h5 class="card-title fs-5 fw-bold m-0 ">{{movie.title}}</h5>
     <p class="card-text text-muted fs-6">{{movie.release_date}}</p>
     </div>
-    <!-- <i class="fa-regular fa-heart mt-2 fs-3"></i> -->
-<!-- <i class="fa-solid fa-heart my-auto mt-2 fs-3"></i> -->
+
 
 <button
   (click)="toggleInWishlist(movie, 'movie')"
@@ -47,19 +50,58 @@
         }
  
 </button>
+    </div>
+<div class="counter">
 
-            <!-- <button (click)="toggleWishlist($event, singleProduct())"
-        class="border-0 bg-transparent position-absolute end-0 m-1">
-        @if(_wishList.isInWishlist(singleProduct())){
-          <i class="fa-solid fa-heart fs-3 text-danger" ></i>
-        }@else if(!_wishList.isInWishlist(singleProduct())){
-           <i class="fa-regular fa-heart fs-3 "></i>
-        } -->
+<div class="vote-circle text-center position-relative">
+  <svg height="40" width="40" class="circle-progress">
+    <circle r="18" cx="20" cy="20" class="circle-bg" />
+    <circle
+      r="18"
+      cx="20"
+      cy="20"
+      class="circle"
+      [attr.stroke-dasharray]="2 * Math.PI * 18"
+      [attr.stroke-dashoffset]="2 * Math.PI * 18 - (movie.vote_average * 10 / 100) * (2 * Math.PI * 18)"
+      [attr.stroke]="getVoteColor(movie.vote_average)"
+    />
+  </svg>
+
+  <div class="circle-overlay-small">
+    {{ movie.vote_average * 10 | number: '1.0-0' }}%
+  </div>
+</div>
+
+  
+</div>
+
+
+
   </div>
 </div>
             </div>
+  }
+ 
             }
-        
+
+ @if(!term){
+  <div   class="d-flex justify-content-center">
+          <ngb-pagination
+           class="my-pagination"
+	[collectionSize]="5000"
+	[(page)]="page"
+  (pageChange)="onPageChange($event)"
+	[maxSize]="5"
+	[rotate]="true"
+	[ellipses]="true"
+	[boundaryLinks]="false"
+
+/>
+         </div>
+ }
+       
+
+    
         </div>
     </div>
 </section>
